Initial Checkin, after a day of struggles, we hacked the movies mvc project apart to create something with some jazz, register an account w/ email and take a look at what we have so far

--- a/MvcMovie/src/MvcMovie/project.json
+++ b/MvcMovie/src/MvcMovie/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "userSecretsId": "aspnet-MvcMovie-e1b22e85-9485-4b23-a2a7-59a56c502241",
 
   "dependencies": {
@@ -40,10 +40,11 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc":  {
+    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": {
       "version": "1.0.0-preview2-final",
       "type": "build"
-    }
+    },
+    "jQuery.UI.Combined": "1.12.0"
   },
 
   "tools": {
