--- a/MvcMovie/src/MvcMovie/web.config
+++ b/MvcMovie/src/MvcMovie/web.config
@@ -11,4 +11,11 @@
     </handlers>
     <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false"/>
   </system.webServer>
+
+  <system.web>
+    <globalization fileEncoding="utf-8"
+                   requestEncoding="utf-8"
+                   culture="en-US"
+                   uiCulture="en-US" />
+  </system.web>
 </configuration>
